# Nachos

./: MIT-LICENSE.txt  README.md  install.sh
mem-axc/: README
mem-axc-64/apps/bloom.s/: CMakeLists.txt  CMakeLists.txt.sharedlib  CMakeLists.txt.standalone  CMakeLists.txt.staticlib
mem-axc-64/apps/bloom.s/config/: .RubyConfig.C.swp  .RubyConfig.h.swp
mem-axc-64/apps/bloom.s/include/: AbstractBloomFilter.h  BulkBloomFilter.h  H3BloomFilter.h  NonCountingBloomFilter.h
mem-axc-64/apps/bloom.s/src/: Falsepos.C.0  GenericBloomFilter_1.C  LSB_CountingBloomFilter_1.C  Main.C
mem-axc-64/apps/dafaxc.r.b.s/: CMakeLists.txt  CMakeLists.txt.sharedlib  README  run-dafaxc.sh
mem-axc-64/apps/dafaxc.r.b.s/include/: graph.hpp
mem-axc-64/apps/dafaxc.r.b.s/src/: dummy_ruby.cpp  graph.cpp  main.cpp  memory.cpp
mem-axc-64/apps/dafaxc.r.b.s/tools/: run-dafaxc.sh
mem-axc-64/apps/macsim.r.d.b.s/dafaxc/: CMakeLists.txt.sharedlib  CMakeLists.txt.standalone  README
mem-axc-64/apps/macsim.r.d.b.s/macsim-mem-axc-64/: CMakeLists.txt  CMakeLists.txt.standalone
mem-axc-64/apps/macsim.r.d.b.s/macsim-mem-axc-64/cp_to_bin_files/: params.in
mem-axc-64/apps/macsim.r.d.b.s/macsim-mem-axc-64/def/: core.stat.def  memory.param.def
mem-axc-64/apps/macsim.r.d.b.s/macsim-mem-axc-64/gems-lib-ooo/common/: Makefile.common
mem-axc-64/apps/macsim.r.d.b.s/macsim-mem-axc-64/gems-lib-ooo/ruby_clean/O3sim_ruby/: O3sim_ruby.C
mem-axc-64/apps/macsim.r.d.b.s/macsim-mem-axc-64/gems-lib-ooo/ruby_clean/config/: O3simconfig.defaults
mem-axc-64/apps/macsim.r.d.b.s/macsim-mem-axc-64/include/: core.h  fetch_factory.h  global_types.h  macsim.h  memory.h  pref_common.h  process_manager.h  retire.h  rob.h  router.h  thread.h  trace_read.h
mem-axc-64/apps/macsim.r.d.b.s/macsim-mem-axc-64/libroi/inc/: roi.h
mem-axc-64/apps/macsim.r.d.b.s/macsim-mem-axc-64/src/: CMakeLists.txt  all_stats.h  allocate.cc  context.cc  core.cc  frontend.cc  hash.cc  rob.cc  schedule.cc  schedule_ooo.cc  thread.cc
mem-axc-64/apps/test/: test1.dot  test2.dot  test3.dot  test4.dot
mem-axc-64/apps/test/bloom/: test6.dot
mem-axc-64/apps/test_case/ld_st/: dfg.__offload_func_10.dot
mem-axc-64/tools/c++/may-profile/: CMakeLists.txt  test.input
mem-axc-64/tools/c++/may-profile/src/: may-profile.cpp
mem-axc-64/tools/pin-tools/axc-chunkgen/: DSTrace.cpp  makefile.rules
mem-axc-64/tools/pin-tools/ldst-gen/: common-trace-fields.cpp
mem-axc-64/tools/pin-tools/macsim-orig/: trace_generator.cpp  xed_extractor.cpp
mem-axc-64/tools/pin-tools/mem-addr-macsim-acc/: MemAddr.h  test.cpp
mem-axc-64/tools/pin-tools/mem-addr-offload-only/: Offload.cpp  Readme.txt
mem-axc-64/tools/python/: process_dot.py
mem-axc-64/tools/python/fanins/: fanins.py
mem-axc/bloom/: CMakeLists.txt
mem-axc/bloom/config/: tester.defaults
mem-axc/bloom/include/: BlockBloomFilter.h  GenericBloomFilter_1.h  LSB_CountingBloomFilter_1.h  MachineType.h  MultiBitSelBloomFilter.h  MultiGrainBloomFilter.h
mem-axc/bloom/src/: MachineType.C
mem-axc/dafaxc/: CMakeLists.txt  run-dafaxc.sh
mem-axc/dafaxc/include/: Instruction.def  data_type.hpp  dummy_ruby.hpp  grepInst.def  memory.hpp
mem-axc/dafaxc/src/: main.cpp
mem-axc/deprecated/macsim/: CMakeLists.txt  README.txt
mem-axc/deprecated/macsim/cp_to_bin_files/: trace_file_list
mem-axc/deprecated/macsim/def/: memory.stat.def
mem-axc/deprecated/macsim/include/: all_knobs.h  alloc_thread_info.h  bug_detector.h  context.h  debug_macros.h  global_defs.h  hash.h  map.h  memory.h  memreq_info.h  pqueue.h  rob_smc.h  schedule.h  trace_read.h  uop.h
mem-axc/deprecated/macsim/libroi/: Makefile
mem-axc/deprecated/macsim/macsim-mem-axc-64/trash/: Makefile.orig
mem-axc/deprecated/macsim/macsim-mem-axc-64/trash/gems-lib-ooo/ruby_clean/config/: rubyconfig.defaults
mem-axc/deprecated/macsim/src/: all_knobs.cc  all_stats.cc  alloc_thread_info.cc  exec.cc  macsim.cc  map.cc  memory.cc  memreq_info.cc  process_manager.cc  retire.cc  statsEnums.h  trace_read.cc  uop.cc  utils.cc
mem-axc/test/: dfg.__offload_func_50969.dot  test3-mem.out  test4-mem.out
mem-axc/test/bloom/: test5-mem.out  test5.dot
mem-axc/test_case/1/: 1.dot
mem-axc/test_case/1_comp/: 1.dot  2.dot
mem-axc/test_case/full/: ldst.dfg.__offload_func_50969.dot
mem-axc/tools/pin-tools/: README
needle/: README.md
needle/lib/: CMakeLists.txt
needle/lib/InstruMem/: InstruMem.cpp
needle/tools/mead/: mead
needle/tools/mwe/: main.cpp
pasha/include/: AliasEdgeWriter.h
pasha/lib/aew/: AliasEdgeWriter.cpp
run-framework/: README.md  Template.xml  apps.sh  bias.py  chop.py  clean.sh  common.sh  header.py  inline-depth.py  mv-axc-dump.sh  n1.common.sh  n3.common.sh  params.sh  rank-apps.sh  run-only.sh  sb-finder.py  ska124_get.sh  ska124_path.py  stats.py  test.sh  test_apps.sh
run-framework/164.gzip/: bench.sh
run-framework/175.vpr/: bench.sh
run-framework/179.art/: bench.sh
run-framework/181.mcf/: bench.sh
run-framework/183.equake/: bench.sh
run-framework/186.crafty/: bench.sh
run-framework/197.parser/: bench.sh
run-framework/254.gap/: bench.sh
run-framework/401.bzip2/: bench.sh
run-framework/403.gcc/: bench.sh
run-framework/429.mcf/: bench.sh
run-framework/444.namd/: bench.sh
run-framework/450.soplex/: bench.sh
run-framework/453.povray/: bench.sh
run-framework/456.hmmer/: bench.sh
run-framework/458.sjeng/: bench.sh
run-framework/464.h264ref/: bench.sh
run-framework/470.lbm/: bench.sh
run-framework/482.sphinx3/: bench.sh
run-framework/blackscholes/: bench.sh
run-framework/bodytrack/: bench.sh
run-framework/dwt53/: bench.sh
run-framework/ferret/: bench.sh
run-framework/fft-2d/: bench.sh
run-framework/fluidanimate/: bench.sh
run-framework/for/: bench.sh
run-framework/freqmine/: bench.sh
run-framework/histogram/: bench.sh
run-framework/sar-backprojection/: bench.sh
run-framework/sar-pfa-interp1/: bench.sh
run-framework/streamcluster/: bench.sh
run-framework/swaptions/: bench.sh
run-framework/tmp/: apps.sh  common.sh  n1.common.sh  params.sh  run-all.sh  run-only.sh  run.sh
(+62 files in other folders)
